<resources>
    <string name="app_name">SuperMarketSC</string>


    <string name="some_error">Some Error Occurred!</string>
    <string name="exit">ВЫХОД</string>
    <string name="scan_your_code">Отсканируйте свой штрихкод: </string>
    <string name="enter_your_pin">Введите свой Pin-код: </string>
    <string name="login">Логин</string>
    <string name="enter">войти</string>
    <string name="sort">сортировать</string>
    <string name="close_cell">закрыть ячейку</string>
    <string name="config_printer">Настройка принтера</string>

    <string name="btnScannerSelectBarcode">Scanner Selection Example</string>
    <string name="btnSwitchScanners">Switch Scanners</string>
    <string name="txtBarcodeTitle">Press the device\'s scan button to scan a barcode.</string>
    <string name="scan_package">Сканируйте ШПИ посылки</string>
    <string name="your_code">ваш штрихкод</string>
    <string name="scan_bag">Сканируйте ШПИ мешка</string>
    <string name="enter_seal">Введите номер пломбы</string>
    <string name="enter_weight">Введите вес</string>
    <string name="back">назад</string>
    <string name="next">далее</string>
    <string name="chose_printer">Выбор принтера</string>
    <string name="repeat_label_print">повторить печать ярлыка</string>
    <string name="no_user_barcode">нет баркода оператора</string>
    <string name="pin">Пин-код</string>
    <string name="tv_post_index_list">Список почтовых индексов</string>


    <string name="spinner_dialog_title">Выберите отделение</string>
    <string name="btn_close">Закрыть</string>
    <string name="scan_title">Сканируйте или введите данные</string>
    <string name="current_post_index">Текущий почтовый индекс: </string>

    <string name="nonvalid_data">Формат введенных данных не верен</string>
    <string name="scan">Сканировать</string>
    <string name="send">Отправить</string>
    <string name="clear">очистить</string>
    <string name="enter_market_index">Индекс супермаркета</string>
    <string name="save_market_index">Сохранить</string>
</resources>

