<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_current_post_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/current_post_index" />


    <LinearLayout
        android:id="@+id/ll_scan_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_current_post_index"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/scan_title"
            android:textColor="@color/black_effective"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_postcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_scan_activity"
        android:layout_margin="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="ШПИ"
        android:imeOptions="flagNoFullscreen"
        android:padding="3dp" />


    <LinearLayout
        android:id="@+id/ll_row_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_postcode"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_row"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:hint="ряд и ячейка"
            android:imeOptions="flagNoFullscreen"
            android:padding="3dp"
            android:visibility="visible" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_row_cell"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scan" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_btns_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_btns"
        android:layout_marginLeft="8dp"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_clean"
            android:layout_width="0dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/clear" />

    </LinearLayout>

</RelativeLayout>
